--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -7,37 +7,37 @@
         {{ $current := . }}
 
         {{ range $count, $page := $pages }}
-            {{ if eq .Parent $section }}
+        {{ if eq .Parent $section }}
 
-                <div class="card">
-                    <div class="card-header" role="tab" id="header{{ $count }}">
-                        <a data-toggle="collapse" href="#collapse{{ $count }}" title="{{ $page.Description }}" role="button" aria-controls="collapse{{ $count }}">
-                            <div>
-                                {{- if $page.Params.icon -}}
-                                    {{- partial "icon.html" .Params.icon -}}
-                                {{- end -}}
-                                {{- $page.Title -}}
-                            </div>
-                        </a>
+        <div class="card">
+            <div class="card-header" role="tab" id="header{{ $count }}">
+                <a title="{{ $page.Description }}" role="button" aria-controls="collapse{{ $count }}" href="{{ $page.Permalink }}">
+                    <div>
+                        {{- if $page.Params.icon -}}
+                        {{- partial "icon.html" .Params.icon -}}
+                        {{- end -}}
+                        {{- $page.Title -}}
                     </div>
+                </a>
+            </div>
 
-                    <div id="collapse{{ $count }}" class="collapse{{if .IsAncestor $current}} show{{end}}" role="tabpanel" aria-labelledby="header{{ $count }}">
-                        <div class="card-body">
-                            {{ partial "sidebar-level.html" (dict "pages" $pages "parent" $page "current" $current "collapse" false) }}
-                        </div>
-                    </div>
+            <div id="collapse{{ $count }}" class="collapse{{if .IsAncestor $current}} show{{end}}" role="tabpanel" aria-labelledby="header{{ $count }}">
+                <div class="card-body">
+                    {{ partial "sidebar-level.html" (dict "pages" $pages "parent" $page "current" $current "collapse" false) }}
                 </div>
-            {{ end }}
+            </div>
+        </div>
+        {{ end }}
         {{ end }}
 
         {{ if not .Site.Data.args.archive }}
-            {{ if strings.HasSuffix $section.Dir "blog/" }}
-                <div class="subscribe" >
-                    <a href="/feed.xml" target="_blank">
-                        {{ partial "large_icon.html" "rss" }}{{ i18n "subscribe" }}
-                    </a>
-                </div>
-            {{ end }}
+        {{ if strings.HasSuffix $section.Dir "blog/" }}
+        <div class="subscribe">
+            <a href="/feed.xml" target="_blank">
+                {{ partial "large_icon.html" "rss" }}{{ i18n "subscribe" }}
+            </a>
+        </div>
+        {{ end }}
         {{ end }}
     </div>
 </nav>
