#748 Working on architecture

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 {{end}}
 {{ define "meta"}}
 <meta property="og:description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">
-<meta property="og:title" content="keptn - Continuous Delivery and Operations for Kubernetes">
+<meta property="og:title" content="Keptn - Continuous Delivery and Operations for Kubernetes">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
 <meta name="twitter:card" content="summary_large_image">
@@ -45,13 +45,13 @@
         </ul>
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane fade show active" id="developer" role="tabpanel" aria-labelledby="developer-tab">
-            <img src="/images/dev_usecase_animated.gif" alt="keptn for developers" />
+            <img src="/images/dev_usecase_animated.gif" alt="Keptn for developers" />
           </div>
           <div class="tab-pane fade" id="devops" role="tabpanel" aria-labelledby="devops-tab">
-              <img class="img-fluid" src="/images/devops_usecase_animated.gif" alt="keptn for DevOps"/>
+              <img class="img-fluid" src="/images/devops_usecase_animated.gif" alt="Keptn for DevOps"/>
             </div>
           <div class="tab-pane fade" id="sre" role="tabpanel" aria-labelledby="sre-tab">
-              <img class="img-fluid" src="/images/sre_usecase_animated.gif" alt="keptn for SREe"/>
+              <img class="img-fluid" src="/images/sre_usecase_animated.gif" alt="Keptn for SREe"/>
           </div>
 
         </div>
@@ -64,7 +64,7 @@
 <div class="container pt-2 pt-md-2 pb-md-2">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="mb-3">Advantages of keptn</h2>
+      <h2 class="mb-3">Advantages of Keptn</h2>
       <br>
     </div>
 
@@ -136,7 +136,7 @@
         <div class="feature">
           <div class="feature-image"><img alt="" src="/images/git-signet-gray700.png" /></div>
           <h2 class="feature-title">GitOps-based collaboration</h2>
-          <div class="feature-content">All keptn workflows are based on the GitOps paradigm.</div>
+          <div class="feature-content">All Keptn workflows are based on the GitOps paradigm.</div>
         </div>
       </div>
 
@@ -176,7 +176,7 @@
         <div class="feature">
           <div class="feature-image"><img alt="" src="images/plug-in-connection-gray700.png" /></div>
           <h2 class="feature-title">Pluggable tooling</h2>
-          <div class="feature-content">All tools leveraged by keptn can be replaced based on your tool preferences.</div>
+          <div class="feature-content">All tools leveraged by Keptn can be replaced based on your tool preferences.</div>
         </div>
       </div>
 
