Slack Link with invite
Update slack link to include shared link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
           <span class="footer-title">Built with <span style="font-size: 1.2rem">&#x2665;</span> <a href="https://dynatrace.com" target="_blank">by Dynatrace</a></span>
           <ul class="list-inline float-right">
             <li class="list-inline-item"><a href="https://github.com/keptn/" target="_blank"><img alt="github" src="{{ .Site.BaseURL }}/social/github.svg" /></a></li>
-            <li class="list-inline-item"><a href="https://keptn.slack.com/" target="_blank"><img alt="slack" src="{{ .Site.BaseURL }}/social/slack.svg" /></a></li>
+            <li class="list-inline-item"><a href="https://join.slack.com/t/keptn/shared_invite/enQtNTUxMTQ1MzgzMzUxLWMzNmM1NDc4MmE0MmQ0MDgwYzMzMDc4NjM5ODk0ZmFjNTE2YzlkMGE4NGU5MWUxODY1NTBjNjNmNmI1NWQ1NGY" target="_blank"><img alt="slack" src="{{ .Site.BaseURL }}/social/slack.svg" /></a></li>
             <li class="list-inline-item"><a href="https://twitter.com/keptnproject" target="_blank"><img alt="twitter" src="{{ .Site.BaseURL }}/social/twitter.svg" /></a></li>
           </ul>
         </div>
