Restructuring the docs section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link active" id="developer-tab" data-toggle="tab" href="#developer" role="tab" aria-controls="developer" aria-selected="true">Developer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="devops-tab" data-toggle="tab" href="#devops" role="tab" aria-controls="devops" aria-selected="false">DevOps</a>
+            <a class="nav-link" id="devops-tab" data-toggle="tab" href="#devops" role="tab" aria-controls="devops" aria-selected="false">DevOps Engineer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="sre-tab" data-toggle="tab" href="#sre" role="tab" aria-controls="sre" aria-selected="false">SRE</a>
+            <a class="nav-link" id="sre-tab" data-toggle="tab" href="#sre" role="tab" aria-controls="sre" aria-selected="false">Site Reliability Engineer</a>
           </li>
 
         </ul>
