first step towards new version

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ define "title" }}keptn | Opinionated framework for event-driven automated continuous operations{{ end}}
+{{ define "title" }}keptn | A message-driven control plane for application delivery and automated operations{{ end}}
 {{ define "header_css" }}{{ end }}
 {{ define "body_classes" }}page-home{{ end }}
 {{ define "header_classes" }}header-transparent{{ end }}
@@ -7,7 +7,7 @@
 {{end}}
 {{ define "meta"}}
 <meta property="og:description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">
-<meta property="og:title" content="Keptn - Continuous Delivery and Operations for Kubernetes">
+<meta property="og:title" content="Keptn - A message-driven control plane for application delivery and automated operations">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
 <meta name="twitter:card" content="summary_large_image">
@@ -60,8 +60,9 @@
     </div>
   </div>
 </div>
+<br>
 
-<div class="container pt-2 pt-md-2 pb-md-2">
+<!--div class="container pt-2 pt-md-2 pb-md-2">
   <div class="row justify-content-start">
     <div class="col-12">
       <h2 class="mb-3">Advantages of Keptn</h2>
@@ -100,7 +101,7 @@
   <div class="container pt-5 pb-5 pt-md-8 pb-md-8">
     <div class="row justify-content-center">
       <div class="col-12">
-        <h2 class="text-center text-dark mb-3">Core capabilities</h2>
+        <h2 class="text-dark mb-3">Core capabilities</h2>
       </div>
 
       <div class="col-12 col-md-6 col-lg-4 mb-2">
@@ -129,7 +130,7 @@
     <div class="row justify-content-center">
       <div class="col-12">
         <br><br>
-        <h2 class="text-center text-dark mb-3">Design principles</h2>
+        <h2 class="text-dark mb-3">Design principles</h2>
       </div>
 
       <div class="col-12 col-md-6 col-lg-4 mb-2">
@@ -137,14 +138,6 @@
           <div class="feature-image"><img alt="" src="/images/git-signet-gray700.png" /></div>
           <h2 class="feature-title">GitOps-based collaboration</h2>
           <div class="feature-content">All Keptn workflows are based on the GitOps paradigm.</div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
-        <div class="feature">
-          <div class="feature-image"><img alt="" src="/images/services-gray700.png" /></div>
-          <h2 class="feature-title">Operator patterns for all logic components</h2>
-          <div class="feature-content">Logic components can be reused for other operational tasks.</div>
         </div>
       </div>
 
@@ -158,22 +151,6 @@
 
       <div class="col-12 col-md-6 col-lg-4 mb-2">
         <div class="feature">
-          <div class="feature-image"><img alt="" src="images/kubernetes-signet-gray700.png" /></div>
-          <h2 class="feature-title">Built on and for Kubernetes</h2>
-          <div class="feature-content">Built for modern cloud-native environments.</div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
-        <div class="feature">
-          <div class="feature-image"><img alt="" src="images/serverless-icon.png" /></div>
-          <h2 class="feature-title">Event-driven and serverless</h2>
-          <div class="feature-content">Powerful with a minimal resource footprint.</div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
-        <div class="feature">
           <div class="feature-image"><img alt="" src="images/plug-in-connection-gray700.png" /></div>
           <h2 class="feature-title">Pluggable tooling</h2>
           <div class="feature-content">All tools leveraged by Keptn can be replaced based on your tool preferences.</div>
@@ -182,7 +159,7 @@
 
     </div>
   </div>
-</div>
+</div-->
 {{ end }}
 
 {{ define "footer_js" }}
