updated badge style

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,11 +22,13 @@
   </div>
 </div>
 
+
+
 <div class="strip strip-grey">
   <div class="container  pt-sm-4 pb-sm-4">
     <div class="row justify-content-center">
       <div class="col-12">
-        <h2 class="text-dark mb-3">Use cases</h2>
+        <h2 class="text-dark mb-3">Keptn Core Features</h2>
       </div>
 
       <div class="col-12">
@@ -60,6 +62,33 @@
     </div>
   </div>
 </div>
+
+<div class="container pt-2 pt-md-2 pb-md-2">
+<div class="row justify-content-center">
+      <div class="col-12">
+        <h2 class="text-dark mb-3">Use cases</h2>
+      </div>
+
+      <div class="col-12">
+       
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="developer" role="tabpanel" aria-labelledby="developer-tab">
+            <img src="/images/dev_usecase_animated.gif" alt="Keptn for developers" />
+          </div>
+          <div class="tab-pane fade" id="devops" role="tabpanel" aria-labelledby="devops-tab">
+              <img class="img-fluid" src="/images/devops_usecase_animated.gif" alt="Keptn for DevOps"/>
+            </div>
+          <div class="tab-pane fade" id="sre" role="tabpanel" aria-labelledby="sre-tab">
+              <img class="img-fluid" src="/images/sre_usecase_animated.gif" alt="Keptn for SREe"/>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+    <br>
+</div>
+
 <br>
 
 <!--div class="container pt-2 pt-md-2 pb-md-2">
