--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -152,3 +152,11 @@ body {
 .badges {
   width: 100px;
 }
+
+.btnarea {
+  background: #016BBA;
+  border: 1px solid black;
+  color: white;
+  font-weight: 600;
+  padding: 40px 20px;
+}
