--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -9,15 +9,18 @@
         {{ range $count, $page := $pages }}
         {{ if eq .Parent $section }}
 
+        {{- if lt $page.Weight 992 -}} <!-- do not display release < 0.4.0 -->
         <div class="card">
             <div class="card-header" role="tab" id="header{{ $count }}">
                 <a title="{{ $page.Description }}" role="button" aria-controls="collapse{{ $count }}" href="{{ $page.Permalink }}">
+
                     <div>
                         {{- if $page.Params.icon -}}
                         {{- partial "icon.html" .Params.icon -}}
                         {{- end -}}
                         {{- $page.Title -}}
                     </div>
+
                 </a>
             </div>
 
@@ -27,6 +30,7 @@
                 </div>
             </div>
         </div>
+        {{- end -}}
         {{ end }}
         {{ end }}
 
